--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
 <script src="js/opcoesDaPagina/btnMudaLayout.js" type="text/javascript"></script>
 <script src="js/formNovoCartao.js" type="text/javascript"></script>
 <script src="js/opcoesDoCartao/opcoes.js" type="text/javascript"></script>
+<script src="js/cartao.js" type="text/javascript"></script>
+<script src="js/opcoesDaPagina/btnAjuda.js" type="text/javascript"></script>
 </body>
 </html>
